--- a/app/src/main/res/layout/activity_any_base_to_any_base.xml
+++ b/app/src/main/res/layout/activity_any_base_to_any_base.xml
@@ -21,156 +21,168 @@
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         android:textStyle="bold|italic" />
-    <LinearLayout
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="20dp"
-        android:gravity="center"
-        android:background="@drawable/round_button_background">
-
-        <EditText
-            android:id="@+id/editText_any_base_number_input"
-            android:layout_width="250dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
-            android:backgroundTint="#000000"
-            android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ."
-            android:gravity="center_horizontal"
-            android:hint="@string/any_base_input_hint"
-            android:inputType="textCapCharacters"
-            android:textCursorDrawable="@null"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            tools:ignore="TextFields"
-            android:autofillHints="no" />
-
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/textView_initial_base"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:textColor="#000000"
-                android:textAllCaps="false"
-                android:layout_marginStart="5dp"
-                android:textIsSelectable="false"
-                android:textSize="20sp"
-                android:text="@string/initial_base"
-                android:textStyle="bold" />
-
-            <Spinner
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:id="@+id/initial_base_spinner_id"
-                android:layout_marginStart="5dp">
-
-
-            </Spinner>
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/textView_destination_base"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:textColor="#000000"
-                android:textAllCaps="false"
-                android:layout_marginStart="5dp"
-                android:textIsSelectable="false"
-                android:textSize="20sp"
-                android:text="@string/destination_base"
-                android:textStyle="bold" />
-
-            <Spinner
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:id="@+id/destination_base_spinner_id"
-                android:layout_marginStart="5dp">
-            </Spinner>
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal">
-            <Button
-                android:id="@+id/button_convert"
-                android:layout_width="wrap_content"
+            android:orientation="vertical">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/button_2"
-                android:text="@string/convert_button"
-                android:textAllCaps="false"
-                android:textColor="#0D0555"
-                android:textSize="25sp"
-                android:padding="10dp"
-                android:textStyle="bold"
-                android:layout_marginEnd="20dp"
-                tools:ignore="ButtonStyle" />
-            <Button
-                android:id="@+id/button_reset"
-                android:layout_width="wrap_content"
+                android:gravity="center"
+                android:background="@drawable/round_button_background">
+
+                <EditText
+                    android:id="@+id/editText_any_base_number_input"
+                    android:layout_width="250dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="10dp"
+                    android:backgroundTint="#000000"
+                    android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ."
+                    android:gravity="center_horizontal"
+                    android:hint="@string/any_base_input_hint"
+                    android:inputType="textCapCharacters"
+                    android:textCursorDrawable="@null"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    tools:ignore="TextFields"
+                    android:autofillHints="no" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/textView_initial_base"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:textColor="#000000"
+                        android:textAllCaps="false"
+                        android:layout_marginStart="5dp"
+                        android:textIsSelectable="false"
+                        android:textSize="20sp"
+                        android:text="@string/initial_base"
+                        android:textStyle="bold" />
+
+                    <Spinner
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        android:id="@+id/initial_base_spinner_id"
+                        android:layout_marginStart="5dp">
+
+
+                    </Spinner>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/textView_destination_base"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:textColor="#000000"
+                        android:textAllCaps="false"
+                        android:layout_marginStart="5dp"
+                        android:textIsSelectable="false"
+                        android:textSize="20sp"
+                        android:text="@string/destination_base"
+                        android:textStyle="bold" />
+
+                    <Spinner
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        android:id="@+id/destination_base_spinner_id"
+                        android:layout_marginStart="5dp">
+                    </Spinner>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal">
+                    <Button
+                        android:id="@+id/button_convert"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        android:background="@drawable/button_2"
+                        android:text="@string/convert_button"
+                        android:textAllCaps="false"
+                        android:textColor="#0D0555"
+                        android:textSize="25sp"
+                        android:padding="10dp"
+                        android:textStyle="bold"
+                        android:layout_marginEnd="20dp"
+                        tools:ignore="ButtonStyle" />
+                    <Button
+                        android:id="@+id/button_reset"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        android:background="@drawable/button_2"
+                        android:text="@string/reset_button"
+                        android:padding="10dp"
+                        android:textAllCaps="false"
+                        android:textColor="#0D0555"
+                        android:textSize="25sp"
+                        android:textStyle="bold"
+                        tools:ignore="ButtonStyle" />
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/button_2"
-                android:text="@string/reset_button"
-                android:padding="10dp"
-                android:textAllCaps="false"
-                android:textColor="#0D0555"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                tools:ignore="ButtonStyle" />
+                android:paddingBottom="25dp"
+                android:gravity="center"
+                android:background="@drawable/round_button_background">
+
+                <TextView
+                    android:id="@+id/textView_result"
+                    android:text="@string/result"
+                    android:textAllCaps="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="25sp"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold"
+                    android:padding="5dp" />
+                <TextView
+                    android:id="@+id/textView_any_to_any_output"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textIsSelectable="true"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="#000000"
+                    android:textAllCaps="true"
+                    android:text="@string/dot_line"
+                    android:textSize="25sp"
+                    android:padding="5dp" />
+
+
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="20dp"
-        android:paddingBottom="25dp"
-        android:gravity="center"
-        android:background="@drawable/round_button_background">
+    </ScrollView>
 
-        <TextView
-            android:id="@+id/textView_result"
-            android:text="@string/result"
-            android:textAllCaps="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:padding="5dp" />
-        <TextView
-            android:id="@+id/textView_any_to_any_output"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textIsSelectable="true"
-            android:layout_marginBottom="10dp"
-            android:textColor="#000000"
-            android:textAllCaps="true"
-            android:text="@string/dot_line"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:padding="5dp" />
-
-
-    </LinearLayout>
 
 </LinearLayout>
